welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:12: error: '<-' expected but ')' found.
  for (a<=-0 to nums.length-1) {
                             ^arrayFront9:17: error: illegal start of simple expression
} 
^